--- a/hf_config.yml
+++ b/hf_config.yml
@@ -1,3 +1,3 @@
 # Hugging Face configuration for CT-RATE dataset download
 # Add your access token below
-huggingface_token: "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"
+huggingface_token: "{HUGGING_FACE_TOKEN}" # Replace with your actual token
